[tool.poetry]
name = "template-matching"
version = "0.1.0"
description = ""
authors = ["Xibeijia Guan <xibeijia.guan@ahrefs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
